--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 .navbar{
     width: 100vw;
     position: fixed;
+    z-index: 1;
     top: 0;
     display: flex;
     justify-content: space-between;
@@ -23,18 +24,18 @@ body{
     padding: 0 10px;
 }
 .navbar img{
-    height: 40px;
-    width: 80px;
+    height: 60px;
+    width: 90px;
 }
 ul{
     display: flex;
     list-style: none;
 }
 .navbar ul li{
-    margin: 0 8px;
+    margin: 0 20px;
 }
 .navbar ul li a{
-    font-size: 17px;
+    font-size: 25px;
     position: relative;
 }
 .navbar ul li a::after{
@@ -58,6 +59,7 @@ ul{
     color: #fff;
 }
 
+
 .home{
     display: flex;
     /* position: fixed; */
@@ -70,9 +72,10 @@ ul{
     /* background-image: url(Images/myImageShort.png); */
     background-position: center;
     background-size: cover;
+    border: 1px solid green;
 }
 .home .introDiv{
-    font-size: 35px;
+    font-size: 50px;
     font-weight: 700;
 }
 .home .introDiv h3{
@@ -80,9 +83,9 @@ ul{
     display: inline;
 }
 .home img{
-    height: 400px;
-    width: 350px;
-    margin-top: 40px;
+    height: 600px;
+    width: 520px;
+    margin-top: 60px;
 }
 
 
@@ -91,6 +94,8 @@ ul{
     /* width: 100vw; */
     display: flex;
     margin: 40px;
+    padding-top: 80px;
+    border: 1px solid red;
 }
 .about img{
     height: 250px;
