--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     width: 100vw;
     position: fixed;
     z-index: 1;
-    top: 0;
+    top: 10px;
     display: flex;
     justify-content: space-between;
     /* justify-content: center; */
